--- a/front.html
+++ b/front.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="https://pbs.twimg.com/profile_images/1500923494665797632/VytKgxOP_400x400.jpg">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HubSpot</title>
+    <title>HubSpot | Clone</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="nav-bar.css">
     <link rel="stylesheet" href="midder-part.css">
@@ -146,18 +147,122 @@
       <div>Demo premium CRM</div>
     </div>
   </div>
+  <!-- midder part-A start here!! -->
   <div id="midder-part-A">
     <div>
-      <h6>Marketing Hub <sup>TM</sup></h6>
+      <h6> <span class="iconify" data-icon="pepicons:electricity-print"></span> Marketing Hub <sup>TM</sup></h6>
       <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale,</p>
-      <br><br><br>
+      <br><br><br><br><br>
       <hr>
       <p>Popular Features</p>
+      <ul style="list-style-type: none;">
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Lead generation</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Marketing automation</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Analytics</li>
+      </ul>
+      <p><button>Get started</button></p>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>
+      <h6> <span class="iconify" data-icon="fxemoji:star"></span> Sales Hub<sup>TM</sup></h6>
+      <p>Sales CRM software to help you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+      <br><br><br><br><br>
+      <hr>
+      <p>Popular Features</p>
+      <ul style="list-style-type: none;">
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Advanced CRM</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Meeting scheduling</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Payments</li>
+      </ul>
+      <p><button>Get started</button></p>
+    </div>
+    <div>
+      <h6> <span class="iconify" data-icon="fxemoji:redheart"></span> Service Hub<sup>TM</sup></h6>
+      <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters who grow your business.</p>
+      <br><br><br><br><br>
+      <hr>
+      <p>Popular Features</p>
+      <ul style="list-style-type: none;">
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Tickets</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Customer feedback</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Knowledge base</li>
+      </ul>
+      <p><button>Get started</button></p>
+    </div>
+    <div>
+      <div class="new-feature"><p>NEW FREE FEATURES</p></div>
+      <h6> <span class="iconify" data-icon="bi:grid-1x2-fill" data-rotate="270deg"></span> CMS Hub <sup style="font-size:9px; border:1px solid;border-radius: 50%;padding-bottom: 1px;">&nbspR&nbsp</sup></h6>
+      <p>Content management software that’s flexible for marketers, powerful for developers, and gives customers a personalized, secure experience.,</p>
+      <br><br><br><br><br>
+      <hr>
+      <p>Popular Features</p>
+      <ul style="list-style-type: none;">
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Drag-and-drop editor</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>SEO recommendations</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Website themes</li>
+      </ul>
+      <p><button>Get started</button></p>
+    </div>
+    <div>
+      <h6> <span class="iconify" data-icon="ri:settings-4-fill" data-rotate="270deg"></span> Operations Hub <sup>TM</sup></h6>
+      <p>Operations software that syncs your apps, cleans and curates customer data, and automates processes — so all your systems and teams work better together.</p>
+      <br><br><br><br><br>
+      <hr>
+      <p>Popular Features</p>
+      <ul style="list-style-type: none;">
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Data sync</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span>Programmable automation</li>
+        <li><span class="iconify" data-icon="teenyicons:tick-circle-solid"></span> Analytics</li>
+      </ul>
+      <p><button>Get started</button></p>
+    </div>
+  </div>
+  <!-- MIDDER-PART-B START -->
+  <div id="midder-part-b">
+    <h1>Learn and grow with award-winning support and a thriving community behind you.</h1>
+    <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+    <br><br><br><br>
+    <div class="midder-part-b-grid">
+      <div>
+        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+        <h1>150+</h1>
+        <p>HubSpot user groups</p>
+      </div>
+      <div>
+        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="">
+        <h1>7M+</h1>
+        <p>monthly visits</p>
+      </div>
+      <div>
+        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="">
+        <h1>460K+</h1>
+        <p>certified professionals</p>
+      </div>
+      <div>
+        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="">
+        <h1>70K</h1>
+        <p>registered attendeed</p>
+      </div>
+      <div>
+        <img src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
+        <h1>1,090+</h1>
+        <p>integrations</p>
+      </div>
+      <div>
+        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
+        <h1>6</h1>
+        <p>language</p>
+      </div>
+      <div>
+        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
+        <h1>3.1M+</h1>
+        <p>social followers</p>
+      </div>
+      <div>
+        <img src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
+        <h1>143,000+</h1>
+        <p>customers</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
