--- a/front.html
+++ b/front.html
@@ -8,8 +8,11 @@
     <title>HubSpot | Clone</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="nav-bar.css">
-    <link rel="stylesheet" href="midder-part.css">
+    <link rel="stylesheet" href="midder-part1.css">
     <link rel="stylesheet" href="midder-part2.css">
+    <link rel="stylesheet" href="midder-part3.css">
+    <link rel="stylesheet" href="midder-part4.css">
+    <link rel="stylesheet" href="footer.css">
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 </head>
 <body>
@@ -264,5 +267,109 @@
       </div>
     </div>
   </div>
+  <!-- knee-part start here -->
+  <div id="knee-part">
+    <div class="a">
+      <h1>143,000+</h1>
+      <p>customers in over <b>120</b> countries growing their businesses with HubSpot</p>
+    </div>
+    <div class="b">
+      <img src="https://f.hubspotusercontent00.net/hubfs/53/1200px-WWF_logo_svg%20(1).png" alt="">
+      <img src="https://f.hubspotusercontent00.net/hubfs/53/trello-logo-blue%20(1).png" alt="">
+      <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg" alt="">
+      <img src="https://newinboundblog.hubspot.com/hubfs/assets/hubspot.com/case-studies/logo-bank/EMEA-logo-bank/Suzuki.png" alt="">
+      <img src="https://f.hubspotusercontent00.net/hubfs/53/soundcloud.png" alt="">
+      <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="">
+      <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="">
+    </div>
+    <div class="c">
+      <h1>Start Growing With HubSpot Today</h1>
+      <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+      <button>Start free or get a demo</button>
+      <p>Get started with free tools, or get more with our premium software.</p>
+    </div>
+    <div class="d"><img src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sg-module-images/10@2x.png" alt=""> </div>
+  </div>
+  <br><br><br>
+  <!-- footer start here -->
+  <div id="footer">
+    <div class="container">
+    <div class="a-part">
+      <p>Popular Features</p>
+      <div class="rowcoloumn">
+        <p>Free Meeting Scheduler App</p>
+        <p>Sales Email Templates</p>
+        <p>Social Media Tools</p>
+        <p>Help Desk Software</p>
+        <p>Email Tracking Software</p>
+        <p>Free Online From Builder</p>
+        <p>Sales Email Automation</p>
+        <p>Free Chatbot Software</p>
+        <p>Ads Software</p>
+        <p>Free Live Chat Software</p>
+        <p>Email Marketing Software</p>
+        <p>Marketing Analytics</p>
+        <p>Lead Management Software</p>
+        <p>Free Landing Page Builder</p>
+        <p>Pipeline Management Tools</p>
+  </div>  
+      </div>
+    <div class="b-part">
+      <div>
+        <h4>Free Tools</h4>
+        <p>Website Grader</p>
+        <p>Make My Persona</p>
+        <p>Email Singnature Generator</p>
+        <p>Blog Ideas Generator</p>
+        <p>Invoice Template Generator</p>
+        <p>Marketing plan Generator</p>
+        <p>Free Buisness Templates</p>
+        <p>Industry Benchmark Data</p>
+        <p>Software Comparisons Library</p>
+        <p>Website Themes & Templates</p>
+      </div>
+      <div>
+        <h4>Company </h4>
+        <p>About us</p>
+        <p>Careers</p>
+        <p>Management Team</p>
+        <p>Board of Directors</p>
+        <p>Investor Relations</p>
+        <p>Blog</p>
+        <p>Contact Us</p>
+      </div>
+      <div>
+        <h4>Customers </h4>
+        <p>customer support</p>
+        <p>Join a Local User Group</p>
+        <br><br><br>
+        <h4>Partners</h4>
+        <p>All Partner Program</p>
+        <p>Solutions Partner Program</p>
+        <p>App Partner Program</p>
+        <p>HubSpot for Startups</p>
+        <p>Affiliate Program</p>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="social-media-logo">
+    <span class="iconify" data-icon="bxl:facebook"></span>
+    <span class="iconify" data-icon="ant-design:instagram-outlined"></span>
+    <span class="iconify" data-icon="bxl:youtube"></span>
+    <span class="iconify" data-icon="ant-design:twitter-outlined"></span>
+    <span class="iconify" data-icon="bxl:linkedin"></span>
+    <span class="iconify" data-icon="bxl:medium-old"></span>
+  </div >
+<div id="inner-footer">
+  <img src="https://www.hubspot.com/hubfs/WBZ-1165%20Global%20Nav%20Redesign/Wordmark-White.svg" alt="">
+   <p>Copyright © 2022 HubSpot, Inc.</p>
+   <div class="inner-footer1">
+      <div >Legal Stuff</div>
+      <div>Privacy Policy</div>
+      <div>Security</div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
