--- a/front.html
+++ b/front.html
@@ -32,7 +32,7 @@
         <p><span style="margin-right: 10px;" class="iconify" data-icon="fa:user"></span>Contact Sales</p>
     </div>
     <div>
-        <p><span style="margin-right: 15px; color:rgba(13, 92, 99, 0.993);" class="iconify" data-icon="fa-solid:search"></span>Log In</p>
+        <p><span style="margin-right: 15px; color:rgba(13, 92, 99, 0.993);" class="iconify" data-icon="fa-solid:search"></span><a href="login-part.html">Log in</a></p>
         <p>Customer support</p>
         <div class="dropdown1">
            <button class="dropbtn1">About <span class="iconify" data-icon="bytesize:chevron-bottom"></span></button>
